# research_ai_agent

./: README.md  pyproject.toml  research-agent-roadmap.md
api/: google-genai-api.py
scripts/: embedding_test.py
src/research_agent/: agent.py  client.py
src/research_agent/RAG/: chunk.py  embeddings.py  storage.py
src/research_agent/research_kb/: chroma.sqlite3
src/research_agent/schemas/: web_search_schema.py
src/research_agent/tools/: agent_prompts.py  definitions.py  handlers.py
tests/: test.py  test_chunker.py
